<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/enter_range"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-4dp">

        <EditText
            android:id="@+id/maxrange"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/max"
            android:inputType="number" />

        <TextView
            android:id="@+id/justmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="~" />

        <EditText
            android:id="@+id/mixrange"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/mix"
            android:inputType="number" />

    </LinearLayout>

    <Button
        android:id="@+id/start1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/enter_range" />

    <EditText
        android:id="@+id/enternum"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/guessnum"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/enter_range"
        app:layout_constraintTop_toBottomOf="@+id/enter_range" />

    <Button
        android:id="@+id/start2"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:text="@string/start2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/enternum" />

    <TextView
        android:id="@+id/point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="75dp"
        android:textSize="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.179" />

    <TextView
        android:id="@+id/history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:textSize="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/point" />

    <TextView
        android:id="@+id/guessh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/history" />

    <ImageView
        android:id="@+id/egg"
        android:layout_width="210dp"
        android:layout_height="209dp"
        android:layout_marginBottom="100dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/author" />

    <TextView
        android:id="@+id/info"
        android:layout_width="350dp"
        android:layout_height="92dp"
        android:text="
Author info: \n
twitter:https://twitter.com/5925eddie \n
youtube channel:https://www.youtube.com/channel/UCetLwzQcY2HFnBow3CyY1fg\n
facebook:https://www.facebook.com/profile.php?id=100000343315042
"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>